--- a/public/asset/style.css
+++ b/public/asset/style.css
@@ -1,5 +1,5 @@
 #navbarr{
-    background-color:#0a4275 !important;
+    background-color:#000000 !important;
 }
 @media (max-width: 991px) {
   .navbar-scroll {
